fe: generating types for the API with swagger
