# server/swagger.json
@@ -10,6 +10,7 @@
   "paths": {
     "/users": {
       "post": {
+        "operationId": "createUser",
         "tags": [
           "users"
         ],
@@ -50,6 +51,7 @@
         }
       },
       "get": {
+        "operationId": "listUsers",
         "tags": [
           "users"
         ],
@@ -86,6 +88,7 @@
     },
     "/users/{id}": {
       "get": {
+        "operationId": "getUser",
         "tags": [
           "users"
         ],
@@ -147,6 +150,7 @@
         }
       },
       "patch": {
+        "operationId": "updateUser",
         "tags": [
           "users"
         ],
@@ -217,6 +221,7 @@
         }
       },
       "delete": {
+        "operationId": "deleteUser",
         "tags": [
           "users"
         ],
